--- a/templates/emails/submission.html
+++ b/templates/emails/submission.html
@@ -1,7 +1,7 @@
 Hey, {{student.email}},
 <br>
 <br>
-<a href={{url_for('index')}}>Mitzvah Scheduler</a> has just received thee following information regarding {{student.name}}:
+<a href={{url_for('index')}}>Mitzvah Scheduler</a> has just received thee following information regarding {{student.childName}}:
 <ul>
 	<li>Name: {{student.email}}</li>
 	<li>School: {{student.school.name}}</li>
